<resources>
    <string name="app_name">AnDSON</string>
    <string name="action_settings">设置</string>
    <string name="title_activity_change_ip">ChangeIPActivity</string>
    <string name="title_activity_main_ui">MainUIActivity</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_searcher">SearcherActivity</string>
    <string name="title_activity_tvmanage">TVManageActivity</string>
    <string name="title_activity_tvinfo">TVInfoActivity</string>
    <string name="title_activity_competition_manage">CompetitionManageActivity</string>
    <string name="title_activity_new_match">NewMatchActivity</string>
    <string name="spin_prompt">spin_prompt</string>
    <string name="title_activity_enter">EnterActivity</string>
    <string name="title_activity_vipenter">VIPEnterActivity</string>
    <string name="title_activity_entrance_check">EntranceCheckActivity</string>
    <string name="OK">确定</string>
    <string name="Cancel">取消</string>
    <string name="_server_address_label">服务器地址：</string>
    <string name="_ip_input_server_address_label">输入服务器IP地址</string>
    <string name="_save">保存</string>
    <string name="_network_print">网络打印</string>
    <string name="_bluetooth_print">蓝牙打印</string>
    <string name="printer_address">打印机地址：</string>
    <string name="_ip_input_printer_address">输入打印机IP地址</string>
    <string name="_lablefor_match_ended_list">已结束比赛列表</string>
    <string name="please_choose_match_imported">请选择需要导入的比赛</string>
    <string name="condition_for_importing">导入条件</string>
    <string name="random_distribute_table">"随机分桌 "</string>
    <string name="fix_distribute_table">固定座位</string>
    <string name="importing">导入</string>
    <string name="swiping_card">刷卡</string>
    <string name="_post_player_card">上传选手卡</string>
    <string name="post_privilege_card">上传权限卡</string>
    <string name="_tip_please_swiping_card">---请刷卡---</string>
    <string name="setting_printer_server">设置服务器和打印机</string>
    <string name="hint_show_employees_name">这里显示员工姓名</string>
    <string name="hint_show_employees_privilege">这里显示员工权限</string>
    <string name="MAINUI_addMember">新建会员</string>
    <string name="MAINUI_searchMember">会员查询</string>
    <string name="MAINUI_TVManage">大屏幕管理</string>
    <string name="MAINUI_registMember">会员报名</string>
    <string name="MAINUI_regist_VIP_Member">VIP报名</string>
    <string name="MAINUI_initialize_NFC_card">初始化NFC</string>
    <string name="MAINUI_check_ID">入场安检</string>
    <string name="MAINUI_match_list">赛事列表</string>
    <string name="MAINUI_promotion_manage">进阶管理</string>
    <string name="MAINUI_table_manage">牌桌管理</string>
    <string name="basic_info">基本信息</string>
    <string name="match_start_time">开始时间</string>
    <string name="addmatch_set_date">设置日期</string>
    <string name="addmatch_set_time">设置时间</string>
    <string name="addmatch_match_name">比赛名称</string>
    <string name="addmatch_least_prize">保底奖金</string>
    <string name="addmatch_match_entry_fee">"参赛费"</string>
    <string name="addmatch_match_manage_fee">"管理费"</string>
    <string name="addMatch_start_chips">初始筹码：</string>
    <string name="addMatch_money_unit">金额单位</string>
    <string name="addMatch_choose_blind_template">"选择盲注模板"</string>
    <string name="addMatch_choose_prize_template">"选择奖励模板"</string>
    <string name="addmatch_cur_blind_level">当前盲注级别</string>
    <string name="addmatch_prize_template_dont_choose">不选择</string>
    <string name="addmatch_prize_template_choose">选择</string>
    <string name="addMatch_finish_sign_player_before">结束报名条件：在</string>
    <string name="addmatch_before_blind_level_start">盲注级别开始前</string>
    <string name="addMatch_entries_requested">参赛要求</string>
    <string name="enter_date_matchDate">2015-10-29 星期四</string>
    <string name="enter_match_matchName">线下大师赛</string>
    <string name="enter_match_not_sign_up">未报名(点此处报名)</string>
    <string name="reEntry">重进</string>
    <string name="allowed">"允许 "</string>
    <string name="not_allow">不允许</string>
    <string name="addMatch_set_table">牌桌设置</string>
    <string name="ten_table_model">十人桌</string>
    <string name="nine_tables_model">"九人桌"</string>
    <string name="six_tables_model">六人桌</string>
    <string name="addmatch_set_match">比赛设置</string>
    <string name="addmatch_if_use_distribute_system">"是否使用分桌系统"</string>
    <string name="YES">是</string>
    <string name="NO">否</string>
    <string name="addmatch_match_type">"比赛类型 "</string>
    <string name="addmatch_promoting_match">晋级赛</string>
    <string name="addmatch_not_promoting_match">非晋级赛</string>
    <string name="addMatch_hint_before_blind_level">16</string>
    <string name="addmatch_hint_least_prize">8000000</string>
    <string name="register_tip_take_photo">点击头像可拍照</string>
    <string name="register_card_no">卡号：</string>
    <string name="register_tip_please_swipe_memcard">请刷有效会员卡</string>
    <string name="register_printandsave">打印并保存</string>
    <string name="register_mem_name">姓名：</string>
    <string name="register_gender">性别：</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="register_mobile_no">手机号：</string>
    <string name="register_id_no">证件号：</string>
    <string name="tablemanage_place_name">场地名称：</string>
    <string name="tablemanage_place_name_input"> 填写场地名称</string>
    <string name="tablemanage_table_num">牌桌数量：</string>
    <string name="tvinfo_box_name">盒子名称</string>
    <string name="tvinfo_please_input_box_name">请输入盒子名称</string>
    <string name="tvinfo_show_language">显示语言</string>
    <string name="Chinese">中文</string>
    <string name="tvinfo_different_show_content">分类显示内容</string>
    <string name="tvinfo_match_name">赛事名称</string>
    <string name="tvinfo_match_list">赛事列表</string>
    <string name="dont_send">不推送</string>
    <string name="tvinfo_show_content">显示内容</string>
    <string name="vipenter_fix_seat">指定座位号：</string>
    <string name="vipenter_table_no">桌号：</string>
    <string name="vipenter_hint_input_tableNO">输入指定桌号</string>
    <string name="seatNO">座位号：</string>
    <string name="vipenter_fix_seat_no">输入指定座位号</string>
    <string name="adversts_example">三亚赛宣传图</string>
    <string name="one_unit">个</string>
    <string name="input_chips_Num">填写筹码量</string>
    <string name="chips_num">筹码量：</string>
    <string name="mobile_no_example">16524356894</string>
    <string name="mobile_no">手机号：</string>
    <string name="chips_playername_example">浪失雄治XXX</string>
    <string name="chips_player_name">姓名：</string>
    <string name="chips_cardNO">卡号：</string>
    <string name="chips_cardNO_example">123456</string>
    <string name="_123456789">123456789</string>
    <string name="_xxx">伊润广义XXX</string>
    <string name="_13945652808">13945652808</string>
    <string name="_500000">500000</string>
    <string name="_2015_10_29_">2015-10-29 星期四</string>
    <string name="_match_proceed">正在报名-比赛进行中</string>
    <string name="match_state">比赛状态：</string>
    <string name="have_signed">已报名</string>
    <string name="mem_state">会员状态：</string>
    <string name="_0">0</string>
    <string name="_buy_count">购买手数：</string>
    <string name="xxxxxxxxxxxx">XXXXXXXXXXXX</string>
    <string name="_8_9_">8/9(点击打印桌号)</string>
    <string name="_T_S_">T/S</string>
    <string name="tableSeatNO">桌/座位号：</string>
    <string name="_12_00">12:00</string>
    <string name="time">时间：</string>
    <string name="_2015_10_25">2015-10-25</string>
    <string name="date">日期：</string>
    <string name="_day_1b">三亚赛  DAY 1B</string>
    <string name="match_name">比赛名称：</string>
    <string name="match_re_in">可否重进：</string>
    <string name="_lt_lt_">返回</string>
    <string name="fragment_ad_set">赛事广告设定</string>
    <string name="fragment_comp_chips_input_chip">请刷卡录入筹码"</string>
    <string name="fragment_comp_chips_input_cardNo_search">请输入卡号查找</string>
    <string name="fragment_comp_chips_search">搜索</string>
    <string name="fragment_comp_chips_cardNo">卡号</string>
    <string name="fragment_comp_chips_name">姓名</string>
    <string name="fragment_comp_chips_telNo">手机号</string>
    <string name="fragment_comp_chips_chipsCount">筹码量</string>
    <string name="fragment_comp_player_playerCount">统计人数</string>
    <string name="fragment_comp_player_compplayerCount">参赛人数：</string>
    <string name="fragment_comp_player_chipCount">合计筹码：</string>
    <string name="fragment_comp_player_serious">序号</string>
    <string name="fragment_comp_player_table_seat">座/桌</string>
    <string name="fragment_comp_process_blind_info">盲注信息</string>
    <string name="fragment_comp_process_cur_blind">当前盲级</string>
    <string name="_advancedCompNameHInt">已结束的比赛名称</string>
    <string name="_advancedCompUNFinishedhint">未结束的比赛</string>
    <string name="tableManageInfo">牌桌使用情况</string>
    <string name="menuCompManage">比赛管理</string>
    <string name="menuCompManageNew">新建</string>
    <string name="menuCompManageDel">删除</string>
    <string name="menuCompManageFinist">结束比赛</string>
    <string name="modifyChips">修改奖金</string>
    <string name="printChips">打印奖励</string>
    <string name="menuBack">&lt;&lt;返回</string>
    <string name="menuChooseAll">全选</string>
    <string name="menuUndoChooseAll">全不选</string>
    <string name="menuOpenTable">开启牌桌</string>
    <string name="menuMoveLog">位移记录</string>
    <string name="fragment_comp_process_countdown">倒计时</string>
    <string name="fragment_comp_process_bigblind_smallblind">小盲/大盲</string>
    <string name="fragment_comp_process_former_blind">前注</string>
    <string name="fragment_comp_process_player_count">总人数</string>
    <string name="fragment_comp_process_modify">修改</string>
    <string name="fragment_comp_process_average_chip">平均筹码</string>
    <string name="fragment_comp_process_modify_blind">修改盲级</string>
    <string name="fragment_comp_process_upOneBlindLevel">进一级</string>
    <string name="fragment_comp_process_backOneBlindLevel">退一级</string>
    <string name="fragment_comp_process_pauseComp">暂停比赛</string>
    <string name="fragment_comp_process_startComp">开始比赛</string>
    <string name="fragment_comp_process_modifyBlindTime">修改盲级时间</string>
    <string name="fragment_comp_rewards_rewardInfo">奖池信息</string>
    <string name="fragment_comp_rewards_playerCount">参赛人数：</string>
    <string name="fragment_comp_rewards_RewardCount">总奖池：</string>
    <string name="fragment_comp_rewards_RewardPlayerCount">奖励人数：</string>
    <string name="fragment_comp_rewards_position">名次</string>
    <string name="fragment_comp_rewards_reward">奖金</string>
    <string name="fragment_comp_rewards_playerName">姓名</string>
    <string name="fragment_comp_rewards_cardNo">证件号</string>
    <string name="_print">打印</string>
    <string name="bursttable">爆桌</string>
    <string name="balancetable">平衡</string>
    <string name="freetable">释放</string>
    <string name="newField">新建场地</string>
    <string name="_table">桌</string>
    <string name="_position">名次：</string>
    <string name="prize_num">奖金金额：</string>
    <string name="input_prize_num">填写奖金金额</string>
    <string name="total_removal">去掉总数</string>
    <string name="_person">人</string>
    <string name="input_personinfo">请输入卡号、姓名、证件号、手机号</string>
    <string name="input_blanceinfo">请输入平衡的座位号</string>
    <string name="empty_hint">#####</string>
    <string name="movement_history_new_seat">新桌/座</string>
    <string name="movement_history_old_seat">原桌/座</string>
    <string name="_table_no">桌号</string>
    <string name="_seatNO">座位号</string>
    <string name="_somebody">某某</string>
    <string name="_box_name">盒子名称：</string>
    <string name="_this_show_box_name">这里显示盒子名称</string>
    <string name="_ip_addr">IP号：</string>
    <string name="_this_show_ip_addr">这里显示IP号</string>
    <string name="_tv_box_state">状态：</string>
    <string name="_tv_box_show_state">显示状态</string>
    <string name="_tv_box_content">显示内容：</string>
    <string name="_tv_box_show_content">这里显示显示内容</string>
</resources>