<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/backtolast"
        android:showAsAction="ifRoom|withText"
        android:title="@string/menuBack"/>
    <item
        android:id="@+id/chooseAll"
        android:icon="@drawable/ic_menu_selectall_holo_dark"
        android:showAsAction="ifRoom"
        android:title="@string/menuChooseAll"/>
    <item
        android:id="@+id/undochooseAll"
        android:icon="@drawable/ic_menu_selectall_holo_light"
        android:showAsAction="ifRoom"
        android:title="@string/menuUndoChooseAll"
        android:visible="false"/>
    <item
        android:id="@+id/openTable"
        android:showAsAction="never"
        android:title="@string/menuOpenTable"/>
    <item
        android:id="@+id/movementHistory"
        android:showAsAction="never"
        android:title="@string/menuMoveLog"/>

</menu>