<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="400dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="10dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:padding="10dp" >

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/chips_cardNO"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/playerCardNO"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chips_cardNO_example"
            android:textSize="24sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:padding="10dp" >

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/chips_player_name"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/playerName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chips_playername_example"
            android:textSize="24sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:padding="10dp" >

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/mobile_no"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/playerMobileNO"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mobile_no_example"
            android:textSize="24sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:padding="10dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tableSeatNO"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/playerSTNO"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:text="@string/_T_S_"
            android:textSize="24sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:padding="10dp" >

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/chips_num"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/modifiedChipsNum"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:hint="@string/input_chips_Num"
            android:inputType="number"
            android:singleLine="true"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/one_unit"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/warnMsgInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="@color/red"
            android:textSize="18sp" />
    </LinearLayout>

</LinearLayout>