<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/firstMatch"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E2E2E2"
    android:orientation="vertical"
    android:padding="10dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="1dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/shape_corner_white_no_border" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/match_name"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/matchName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/_day_1b"
            android:textAppearance="?android:attr/textAppearanceLarge" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_corner_white_no_border" >

        <LinearLayout
            android:id="@+id/first1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/compDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_2015_10_25"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/first2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/first1"
            android:layout_marginLeft="150dp"
            android:layout_toRightOf="@id/first1" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/compTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_12_00"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/second1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/first1"
            android:layout_below="@id/first1"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tableSeatNO"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/memPosition"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/xxxxxxxxxxxx"
                android:text="@string/_8_9_"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/second2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/first2"
            android:layout_alignTop="@id/second1" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_buy_count"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/regCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_0"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/third1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/first1"
            android:layout_below="@id/second1"
            android:layout_marginBottom="5dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mem_state"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/memState"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/have_signed"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/third2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/first1"
            android:layout_below="@id/third1" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/match_state"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/matchState"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_match_proceed"
                android:textSize="20sp" />
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>