<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/tvBoxItem"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E2E2E2"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/shape_corner_white_no_border"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_box_name"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/tvBoxName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/_this_show_box_name"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:baselineAligned="false" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="8" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_ip_addr"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/tvBoxIP"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/_this_show_ip_addr"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_tv_box_state"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/tvBoxState"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/_tv_box_show_state"
                    android:textSize="20sp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_tv_box_content"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tvBoxContent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/_tv_box_show_content"
                android:textSize="20sp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>