<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E2E2E2"
    android:orientation="vertical"
    android:padding="10dp" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_margin="10dp"
        android:text="@string/_lablefor_match_ended_list"
        android:textSize="24sp"
        android:textStyle="bold" />

    <ListView
        android:id="@+id/lvFinishCompList"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:layout_weight="0.5" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_margin="10dp"
        android:text="@string/please_choose_match_imported"
        android:textSize="24sp"
        android:textStyle="bold" />

    <ListView
        android:id="@+id/lvImportComp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:layout_weight="0.5"
        android:choiceMode="singleChoice" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_margin="10dp"
        android:text="@string/condition_for_importing"
        android:textSize="24sp"
        android:textStyle="bold" />

    <RadioGroup
        android:id="@+id/rgImportCondition"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_margin="10dp"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/rbImportConditionRandom"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:checked="true"
            android:text="@string/random_distribute_table"
            android:textSize="21sp" />

        <RadioButton
            android:id="@+id/rbImportConditionNonRandom"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/fix_distribute_table"
            android:textSize="21sp" />
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp" >

        <Button
            android:id="@+id/btnImportFinishComp"
            style="?android:attr/buttonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="0.5"
            android:background="@drawable/shape_corner_transparent_black_border"
            android:gravity="center"
            android:text="@string/importing" />

        <Button
            android:id="@+id/btnImportCancel"
            style="?android:attr/buttonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="0.5"
            android:background="@drawable/shape_corner_transparent_black_border"
            android:gravity="center"
            android:text="@string/Cancel" />
    </LinearLayout>

</LinearLayout>