<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/swiping_card"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/shape_corner_white_no_border"
        android:orientation="vertical" >

        <RadioGroup
            android:id="@+id/rbUploadCard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_corner_white_no_border"
            android:orientation="vertical" >

            <RadioButton
                android:id="@+id/rbUploadNormalCard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/_post_player_card" />

            <RadioButton
                android:id="@+id/rbUploadPrivilegeCard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/post_privilege_card" />
        </RadioGroup>
    </LinearLayout>

</LinearLayout>